some correct for descs in training

--- a/notebooks/test_lstm_gru.ipynb
+++ b/notebooks/test_lstm_gru.ipynb
@@ -16,8 +16,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-04-20T12:01:09.764256Z",
-     "start_time": "2024-04-20T12:01:01.634237Z"
+     "end_time": "2024-04-21T17:24:51.896032Z",
+     "start_time": "2024-04-21T17:24:48.512873Z"
     }
    },
    "source": [
@@ -61,8 +61,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-20T12:01:09.769223Z",
-     "start_time": "2024-04-20T12:01:09.765257Z"
+     "end_time": "2024-04-21T17:24:51.901504Z",
+     "start_time": "2024-04-21T17:24:51.897031Z"
     }
    },
    "id": "52965d7484f14b07",
@@ -92,8 +92,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-20T12:01:15.499740Z",
-     "start_time": "2024-04-20T12:01:09.770223Z"
+     "end_time": "2024-04-21T17:24:57.693787Z",
+     "start_time": "2024-04-21T17:24:51.902504Z"
     }
    },
    "id": "a70bdfc7e3d78174",
@@ -129,8 +129,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-20T12:01:17.060857Z",
-     "start_time": "2024-04-20T12:01:15.500731Z"
+     "end_time": "2024-04-21T17:24:59.122592Z",
+     "start_time": "2024-04-21T17:24:57.694783Z"
     }
    },
    "id": "40baed9771b7a9a8",
@@ -147,8 +147,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-20T12:01:17.067015Z",
-     "start_time": "2024-04-20T12:01:17.062835Z"
+     "end_time": "2024-04-21T17:24:59.129281Z",
+     "start_time": "2024-04-21T17:24:59.125577Z"
     }
    },
    "id": "da89eb00882c7f4a",
@@ -165,8 +165,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-20T12:01:17.310630Z",
-     "start_time": "2024-04-20T12:01:17.069008Z"
+     "end_time": "2024-04-21T17:24:59.366487Z",
+     "start_time": "2024-04-21T17:24:59.130276Z"
     }
    },
    "id": "36374af168ed4cfb",
@@ -181,8 +181,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-20T12:01:17.401471Z",
-     "start_time": "2024-04-20T12:01:17.311264Z"
+     "end_time": "2024-04-21T17:24:59.447062Z",
+     "start_time": "2024-04-21T17:24:59.367482Z"
     }
    },
    "id": "c5575c42a0d7d78b",
@@ -197,8 +197,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-20T12:01:17.412275Z",
-     "start_time": "2024-04-20T12:01:17.402461Z"
+     "end_time": "2024-04-21T17:24:59.454520Z",
+     "start_time": "2024-04-21T17:24:59.448057Z"
     }
    },
    "id": "2e55c14934bb66f9",
@@ -234,8 +234,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-20T12:01:17.416733Z",
-     "start_time": "2024-04-20T12:01:17.413271Z"
+     "end_time": "2024-04-21T17:24:59.459968Z",
+     "start_time": "2024-04-21T17:24:59.455510Z"
     }
    },
    "id": "1725596913a6421a",
@@ -277,8 +277,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-20T12:01:17.452238Z",
-     "start_time": "2024-04-20T12:01:17.444312Z"
+     "end_time": "2024-04-21T17:24:59.488Z",
+     "start_time": "2024-04-21T17:24:59.460960Z"
     }
    },
    "id": "23e46798d9c1d0d1",
@@ -303,8 +303,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-20T12:01:17.458006Z",
-     "start_time": "2024-04-20T12:01:17.453229Z"
+     "end_time": "2024-04-21T17:24:59.493789Z",
+     "start_time": "2024-04-21T17:24:59.488993Z"
     }
    },
    "id": "cab82a0f63f84b3e",
@@ -336,8 +336,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-20T12:01:17.466431Z",
-     "start_time": "2024-04-20T12:01:17.458998Z"
+     "end_time": "2024-04-21T17:24:59.502420Z",
+     "start_time": "2024-04-21T17:24:59.495438Z"
     }
    },
    "id": "285237bf0a0cec60",
@@ -403,8 +403,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-20T12:01:17.476891Z",
-     "start_time": "2024-04-20T12:01:17.467423Z"
+     "end_time": "2024-04-21T17:24:59.513391Z",
+     "start_time": "2024-04-21T17:24:59.504415Z"
     }
    },
    "id": "b80ccda661e22f31",
@@ -441,8 +441,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-20T12:01:17.530264Z",
-     "start_time": "2024-04-20T12:01:17.477888Z"
+     "end_time": "2024-04-21T17:24:59.542314Z",
+     "start_time": "2024-04-21T17:24:59.517380Z"
     }
    },
    "id": "d0efae4d5f9679bc",
@@ -485,8 +485,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-20T12:01:17.539234Z",
-     "start_time": "2024-04-20T12:01:17.532253Z"
+     "end_time": "2024-04-21T17:24:59.550487Z",
+     "start_time": "2024-04-21T17:24:59.543311Z"
     }
    },
    "id": "d344dfc7b3b7c189",
@@ -699,7 +699,7 @@
     "    test_predictions = []\n",
     "    test_tags = []\n",
     "\n",
-    "    for tokens, contexts, tags in tqdm(train_dataloader_wsd_1, desc=\"training...\"):\n",
+    "    for tokens, contexts, tags in tqdm(train_dataloader_wsd_1, desc=f\"Epoch {ep} training...\"):\n",
     "        optimizer_wsd_1.zero_grad()\n",
     "\n",
     "        tokens = tokens.to(device)\n",
@@ -729,7 +729,7 @@
     "    model_wsd_1.eval()\n",
     "\n",
     "    with torch.no_grad():\n",
-    "        for tokens, contexts, tags in tqdm(test_dataloader_wsd_1, desc=\"testing...\"):\n",
+    "        for tokens, contexts, tags in tqdm(test_dataloader_wsd_1, desc=f\"Epoch {ep} testing...\"):\n",
     "            tokens = tokens.to(device)\n",
     "            tags = tags.to(device)\n",
     "\n",
@@ -1329,7 +1329,7 @@
     "    test_tags = []\n",
     "\n",
     "\n",
-    "    for tokens, contexts, tags in tqdm(train_dataloader_clean, desc=\"training...\"):\n",
+    "    for tokens, contexts, tags in tqdm(train_dataloader_clean, desc=f\"Epoch {ep} training...\"):\n",
     "        optimizer_clean.zero_grad()\n",
     "\n",
     "        tokens = tokens.to(device)\n",
@@ -1358,7 +1358,7 @@
     "    model_clean.eval()\n",
     "\n",
     "    with torch.no_grad():\n",
-    "        for tokens, contexts, tags in tqdm(test_dataloader_clean, desc=\"testing...\"):\n",
+    "        for tokens, contexts, tags in tqdm(test_dataloader_clean, desc=f\"Epoch {ep} testing...\"):\n",
     "\n",
     "            tokens = tokens.to(device)\n",
     "            tags = tags.to(device)\n",
@@ -1959,7 +1959,7 @@
     "    test_tags = []\n",
     "\n",
     "\n",
-    "    for tokens, contexts, tags in tqdm(train_dataloader_clean_corrected, desc=\"training...\"):\n",
+    "    for tokens, contexts, tags in tqdm(train_dataloader_clean_corrected, desc=f\"Epoch {ep} training...\"):\n",
     "        optimizer_clean_corrected.zero_grad()\n",
     "\n",
     "        tokens = tokens.to(device)\n",
@@ -1989,7 +1989,7 @@
     "    model_clean_corrected.eval()\n",
     "\n",
     "    with torch.no_grad():\n",
-    "        for tokens, contexts, tags in tqdm(test_dataloader_clean_corrected, desc=\"testing...\"):\n",
+    "        for tokens, contexts, tags in tqdm(test_dataloader_clean_corrected, desc=f\"Epoch {ep} testing...\"):\n",
     "\n",
     "            tokens = tokens.to(device)\n",
     "            tags = tags.to(device)\n",
@@ -2759,7 +2759,7 @@
     "    test_tags = []\n",
     "\n",
     "\n",
-    "    for tokens, contexts, tags in tqdm(train_dataloader_wsd_2, desc=\"training...\"):\n",
+    "    for tokens, contexts, tags in tqdm(train_dataloader_wsd_2, desc=f\"Epoch {ep} training...\"):\n",
     "        optimizer_wsd_2.zero_grad()\n",
     "\n",
     "        tokens = tokens.to(device)\n",
@@ -2791,7 +2791,7 @@
     "    model_wsd_2.eval()\n",
     "\n",
     "    with torch.no_grad():\n",
-    "        for tokens, contexts, tags in tqdm(test_dataloader_wsd_2, desc=\"testing...\"):\n",
+    "        for tokens, contexts, tags in tqdm(test_dataloader_wsd_2, desc=f\"Epoch {ep} testing...\"):\n",
     "\n",
     "            tokens = tokens.to(device)\n",
     "            contexts = contexts.to(device)\n",
@@ -3393,7 +3393,7 @@
     "    test_predictions = []\n",
     "    test_tags = []\n",
     "\n",
-    "    for tokens, contexts, tags in tqdm(train_dataloader_clean_corrected_wsd_1, desc=\"training...\"):\n",
+    "    for tokens, contexts, tags in tqdm(train_dataloader_clean_corrected_wsd_1, desc=f\"Epoch {ep} training...\"):\n",
     "        optimizer_clean_corrected_wsd_1.zero_grad()\n",
     "\n",
     "        tokens = tokens.to(device)\n",
@@ -3423,7 +3423,7 @@
     "    model_clean_corrected_wsd_1.eval()\n",
     "\n",
     "    with torch.no_grad():\n",
-    "        for tokens, contexts, tags in tqdm(test_dataloader_clean_corrected_wsd_1, desc=\"testing...\"):\n",
+    "        for tokens, contexts, tags in tqdm(test_dataloader_clean_corrected_wsd_1, desc=f\"Epoch {ep} testing...\"):\n",
     "            tokens = tokens.to(device)\n",
     "            tags = tags.to(device)\n",
     "\n",
@@ -4172,7 +4172,7 @@
     "    test_tags = []\n",
     "\n",
     "\n",
-    "    for tokens, contexts, tags in tqdm(train_dataloader_clean_corrected_wsd_2, desc=\"training...\"):\n",
+    "    for tokens, contexts, tags in tqdm(train_dataloader_clean_corrected_wsd_2, desc=f\"Epoch {ep} training...\"):\n",
     "        optimizer_clean_corrected_wsd_2.zero_grad()\n",
     "\n",
     "        tokens = tokens.to(device)\n",
@@ -4204,7 +4204,7 @@
     "    model_clean_corrected_wsd_2.eval()\n",
     "\n",
     "    with torch.no_grad():\n",
-    "        for tokens, contexts, tags in tqdm(test_dataloader_clean_corrected_wsd_2, desc=\"testing...\"):\n",
+    "        for tokens, contexts, tags in tqdm(test_dataloader_clean_corrected_wsd_2, desc=f\"Epoch {ep} testing...\"):\n",
     "\n",
     "            tokens = tokens.to(device)\n",
     "            contexts = contexts.to(device)\n",
