finish first version of demo of project as local streamlit app

--- a/notebooks/test_lstm_gru.ipynb
+++ b/notebooks/test_lstm_gru.ipynb
@@ -16,8 +16,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-04-21T17:24:51.896032Z",
-     "start_time": "2024-04-21T17:24:48.512873Z"
+     "end_time": "2024-04-22T15:28:23.581580Z",
+     "start_time": "2024-04-22T15:28:23.566566Z"
     }
    },
    "source": [
@@ -38,7 +38,7 @@
     "%matplotlib inline"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -61,13 +61,13 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-21T17:24:51.901504Z",
-     "start_time": "2024-04-21T17:24:51.897031Z"
+     "end_time": "2024-04-22T15:28:24.060399Z",
+     "start_time": "2024-04-22T15:28:24.053115Z"
     }
    },
    "id": "52965d7484f14b07",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -92,8 +92,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-21T17:24:57.693787Z",
-     "start_time": "2024-04-21T17:24:51.902504Z"
+     "end_time": "2024-04-22T15:28:42.727429Z",
+     "start_time": "2024-04-22T15:28:24.235343Z"
     }
    },
    "id": "a70bdfc7e3d78174",
@@ -104,12 +104,54 @@
        "0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 6
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-22T15:28:42.745727Z",
+     "start_time": "2024-04-22T15:28:42.732820Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "labels",
+   "id": "dec4efa3f64c65de",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['genuine question',\n",
+       " 'half joking',\n",
+       " 'genuine',\n",
+       " 'not a vent',\n",
+       " 'reference',\n",
+       " 'serious',\n",
+       " 'platonic',\n",
+       " 'inside joke',\n",
+       " 'sarcastic',\n",
+       " 'joking',\n",
+       " 'romantic',\n",
+       " 'passive aggressive',\n",
+       " 'copypasta',\n",
+       " 'ironic',\n",
+       " 'clickbait',\n",
+       " 'lyrics',\n",
+       " 'nothing personal',\n",
+       " 'not mad',\n",
+       " 'rhetorical']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
